# normtrace-disability-rights

./: .gitignore  CITATION.cff  LICENSE  README.md  normative-analysis-protocol.md  pyproject.toml
data/crpd/: articles.json  general_comments.json
data/frameworks/: gap_taxonomy.json  gender_criteria.json  intersectionality_axes.json
data/references/: doctrine.json  jurisprudence.json
docs/: methodological-note.md  terminology-guide.md
normtrace/: __init__.py  criteria.py  models.py  references.py  standards.py  taxonomy.py  validators.py
references/case-law-notes/: disability-rights-mexico.md  disability-rights-switzerland.md
references/countries/mexico/: legal-system.md  sistema-juridico.md
references/countries/switzerland/: cantonal-analysis-protocol.md  legal-system.md
references/frameworks/: conventionality-analysis.md  exclusion-analysis.md  legal-argumentation.md  structural-analysis.md
references/frameworks/references/frameworks/: structural-analysis.md
references/instruments/: cdpd-key-articles.md  cdpd.md
tests/: test_models.py  test_references.py  test_standards.py  test_taxonomy.py  test_validators.py
